# CHISP-Flasher

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements-cli.txt  requirements-gui.txt  requirements.txt  run.sh  run_cli.sh
.github/workflows/: release.yml
examples/: api_detect.py  api_flash.py  cli_json_detect.py  subprocess_resolve.py
packaging/icons/: app.icns
packaging/linux/: 50-chisp-flasher.rules  chisp-flasher.desktop  post_remove.sh
packaging/windows/: chisp-flasher.iss
reference/: api.md  cli.md  releases.md
scripts/: build_release.py  cli_smoke.py
src/chisp_flasher/app/: main.py
src/chisp_flasher/backends/: ch32v30x.py  uart_framed_generic.py  usb_native_family.py  wch_legacy_uart.py  wch_legacy_usb.py
src/chisp_flasher/core/: operations.py
src/chisp_flasher/data/: chipdb.yaml
src/chisp_flasher/formats/: projectfmt.py
src/chisp_flasher/protocol/: commands.py  config_codec.py  native_usb.py
src/chisp_flasher/transport/: usb_native.py
src/chisp_flasher/ui/: config_layout.py  main_window.py
